--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,6 @@
     </dependencies>
 
 
-
     <build>
         <plugins>
             <plugin>
@@ -65,6 +64,11 @@
                     <source>17</source>
                     <target>17</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.5.0</version>
             </plugin>
         </plugins>
     </build>
